[package]
name = "misskey-indie-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.4.11", features = ["derive"] }
fern = { version = "0.7.0", features = ["colored"] }
log = "0.4.20"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.113"
url = { version = "2.5.0", features = ["serde"] }
