[package]
name = "misskey-indie-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.24", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
url = { version = "2.5.4", features = ["serde"] }
